--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
+<h1>
+WELCOME</h1>
+</h1>
+<h1>2nd Commit</h1>
 
-<htm>
-    <head>
-        <title>PORTFOLIO</title>
-    </head>
-    <body>
-        <h1>WELCOME TO MY PORTFOLIO</h1>
-        <h2>BY: Jp Canoy</h2>
-        <p>I am <strong>BSIT student</strong> from <strong>KCC</strong></p>
-    </body>
-</htm>
+    
